# mib

./: README.md  example.html  example.py  notes.md  pyproject.toml
docs/: example.html  example.py
src/mib/: __init__.py  theme.py
src/nobe/: __init__.py  theme.py
tests/: test_source.py
