[project]
name = "mib"
version = "0.1.0"
description = "A literate programming tool for static notebook as a library"
readme = "README.md"
authors = [
    { name = "Pietro Peterlongo", email = "pietro.peterlongo@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
mib = "mib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
